[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/structures/structure_crate.png" type="Texture" id=1]
[ext_resource path="res://src/structures/Crate.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/boxbreak1.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 14 )

[sub_resource type="Animation" id=3]
resource_name = "Fade"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Box:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Crate" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Box" type="Sprite" parent="."]
position = Vector2( 24, 32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 24, 34 )
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 24, 34 )
shape = SubResource( 2 )

[node name="BreakSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Anims" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 3 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_player_hit"]
[connection signal="animation_finished" from="Anims" to="." method="_on_anim_end"]
